T-7368 theme/standard-totara: Changed dashlets in ie7 to have visible overflow to hopefully solve the scroll bar issue

--- a/theme/standard-totara/styles_ie7.css
+++ b/theme/standard-totara/styles_ie7.css
@@ -36,3 +36,7 @@ div.totara-dialog ul.treeview li {
 div.totara-dialog ul.treeview li span.folder {
     float: left;
 }
+
+.dashboard .dashlet_container {
+    overflow: visible;
+}
